hphp/test/slow/exceptions/ctor_invalid_message_array.php.expectf

Fatal error: Wrong parameters for Exception([string $exception [, long $code [, Exception $previous = NULL]]]) in %s/ctor_invalid_message_array.php on line 3
